fixed some alignments

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,126 +41,7 @@ header:after {
     z-index: 25;
 }
 
-.mountain1 {
-    position: absolute;
-    bottom: -50px;
-    width: 1500px;
-    right: 0;
-    z-index: 19;
-}
 
-.person {
-    position: absolute;
-    width: 100%;
-    bottom: -200px;
-    /* left: -70px; */
-    z-index: 20;
-}
-
-.mountain2 {
-    position: absolute;
-    width: 1100px;
-    bottom: -100px;
-    left: 0;
-    z-index: 18;
-}
-
-.mountain3 {
-    position: absolute;
-    width: 100%;
-    bottom: -250px;
-    right: 0;
-    z-index: 17;
-    opacity: 0.9;
-}
-
-.sky {
-    position: absolute;
-    width: 2100px;
-    bottom: 250px;
-    right: 0;
-}
-
-nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 1rem 0;
-    z-index: 30;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.05), transparent);
-}
-
-nav .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    color: #fff;
-    width: 100px;
-}
-
-.logo span {
-    font-weight: 300;
-}
-
-.hamburger-menu {
-    width: 1.55rem;
-    height: 1.5rem;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.bar {
-    position: relative;
-    width: 1.2rem;
-    height: 3px;
-    background-color: #fff;
-    border-radius: 2px;
-}
-
-.bar:before,
-.bar:after {
-    content: "";
-    position: absolute;
-    width: 1.55rem;
-    height: 3px;
-    right: 0;
-    background-color: #fff;
-    border-radius: 2px;
-}
-
-.bar:before {
-    transform: translateY(-8px);
-}
-
-.bar:after {
-    transform: translateY(8px);
-}
-
-.big-title {
-    position: absolute;
-    z-index: 30;
-    /* line-height: 4rem; */
-    /* top: calc(50% - 2rem); */
-    width: 800px;
-    height: 500px;
-    /* font-size: 5rem; */
-    /* font-weight: 600; */
-    color: #fff;
-}
-.logo-img {
-    position: absolute;
-    z-index: 30;
-    width: 800px;
-    height: 600px;
-    margin-left: auto;
-    margin-right: auto;
-}
 
 section {
     width: 100%;
@@ -236,19 +117,7 @@ section .container > * {
     }
 }
 
-@media (max-width: 600px) {
-    .big-title {
-        font-size: 3rem;
-    }
 
-    .text {
-        font-size: 0.8rem;
-    }
-
-    .title {
-        font-size: 1.2rem;
-    }
-}
 
 .grid-wrapper > div {
     display: flex;
@@ -278,111 +147,4 @@ section .container > * {
 .grid-wrapper .big {
     grid-column: span 2;
     grid-row: span 2;
-}
-
-.circle-obj {
-    background: radial-gradient(closest-side, /* rgba(45, 212, 191, 1),  */ rgba(68, 49, 141, 1), rgba(233, 168, 2, 0));
-    animation: traverse-up-left 10s ease-in-out infinite alternate;
-    z-index: -1;
-}
-
-.circle-obj2 {
-    background: radial-gradient(
-        closest-side,
-        /* rgba(99, 102, 241, 1), */ rgba(233, 128, 116, 1),
-        rgba(233, 168, 2, 0)
-    );
-    animation: traverse-up-right 12s ease-in-out infinite alternate;
-    z-index: -1;
-}
-
-.wrapper {
-    display: grid;
-    grid-template-columns: 1fr min(65ch, calc(100% - 32px)) 1fr;
-    /* column-gap: 16px; */
-}
-.wrapper > * {
-    grid-column: 2;
-}
-.full-bleed {
-    width: 100%;
-    grid-column: 1 / 4;
-}
-
-#carbonads {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
-        Helvetica, Arial, sans-serif;
-    max-width: 300px;
-}
-
-#carbonads > span {
-    display: block;
-    position: relative;
-    padding: 10px;
-
-    border-radius: 4px;
-    background-color: #fff;
-    box-shadow: 0 0 1px 1px hsla(0, 0%, 0%, 0.05), 0 0 2px 2px hsla(0, 0%, 0%, 0.05), 0 0 4px 4px hsla(0, 0%, 0%, 0.05);
-}
-
-#carbonads .carbon-wrap {
-    display: flex;
-}
-
-#carbonads .carbon-img {
-    margin-right: 10px;
-
-    line-height: 1;
-}
-
-#carbonads .carbon-text {
-    margin-bottom: 12px;
-
-    font-size: 12px;
-    line-height: 1.45;
-    text-decoration: none;
-    color: #637381;
-}
-
-#carbonads .carbon-poweredby {
-    position: absolute;
-    bottom: 10px;
-    left: 152px;
-
-    font-size: 8px;
-    font-weight: 500;
-    line-height: 1;
-    text-decoration: none;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    color: #c5cdd0;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.no-scrollbar::-webkit-scrollbar {
-    display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-}
-
-@keyframes traverse-up-left {
-    0% {
-    }
-
-    100% {
-        transform: translateY(-200px) translateX(-350px) rotate(180deg);
-    }
-}
-
-@keyframes traverse-up-right {
-    0% {
-    }
-
-    100% {
-        transform: translateY(-300px) translateX(300px) rotate(360deg);
-    }
 }
